--- a/mainpage.css
+++ b/mainpage.css
@@ -19,6 +19,7 @@ body
   margin: 0;
   scroll-behavior: smooth;
   font-family: 'Montserrat', sans-serif;
+  background: linear-gradient(#e66465, #9198e5);
 }
 
 .block_topbar
@@ -29,6 +30,7 @@ body
   padding: 1rem;
   width: 100%;
   z-index: 9999999;
+  background: white;
 }
 
 .block_topbar h3
@@ -78,11 +80,7 @@ body
 {
   padding: 0;
   overflow: hidden;
-}
-
-.companion img
-{
-  margin: 2%;
+  border-radius: 50%;
 }
 
 img
@@ -108,7 +106,6 @@ img
 {
   padding: 1%;
   background: white;
-  height: 25%;
 }
 
 .companion_bio h4
@@ -118,15 +115,22 @@ img
 
 .comapnion_nav
 {
-  height: 5%;
-  width: inherit;
-  padding: 2%;
-  text-align: center;
+  overflow: hidden;
+  text-align: right;
 }
 
 .nav_btn
 {
-  margin: 0 2rem;
+  height: 3vw;
+  width: 3vw;
+  margin: 1.5rem;
+  box-sizing: border-box;
+  fill: white;
+}
+
+.nav_btn:hover
+{
+  cursor: pointer;
 }
 
 .footer
@@ -142,6 +146,16 @@ img
   padding: 2vw;
   color: whitesmoke;
   font-size: 1vw;
+}
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 @media(max-width: 980px) {
@@ -193,4 +207,16 @@ img
   {
     font-size: 2.2vw;
   }
+}
+
+/*TEST SETTINGS*/
+
+.active
+{
+  display: block;
+}
+
+.bio, .prof_img
+{
+  display: none;
 }
